--- a/css/work.css
+++ b/css/work.css
@@ -124,8 +124,8 @@
     max-width:110% !important;
   }
   .project-title{
-    font-size: 42px;
-    margin-left: -20%;
+    font-size: 38px;
+    margin-left: -15%;
   }
   .extended{
     bottom: -3.7em;
